# Reddit-

./: README.md  pyproject.toml  requirements.txt
.learnings/: LEARNINGS.md
.ship/: session-id.local  ship-auto.local.md
.ship/tasks/integrate-oss-libs-20260414-193052/plan/: diff-report.md  host-spec.md  peer-spec.md  plan.md  spec.md
.ship/tasks/reddit-marketing-tool-20260411/: concerns.md
.ship/tasks/reddit-marketing-tool-20260411/plan/: diff-report.md  peer-spec.md  plan.md  spec.md
.ship/tasks/reddit-toolkit-discover-content-subreddits-write-posts/: review.md  simplify.md
.ship/tasks/reddit-toolkit-discover-content-subreddits-write-posts/plan/: diff-report.md  peer-spec.md  plan.md  spec.md
.ship/tasks/reddit-toolkit-discover-content-subreddits-write-posts/qa/: cli-report.md
.ship/tasks/style-match-20260414-183807/plan/: diff-report.md  host-spec.md  peer-spec.md  plan.md  (+1 more)
.ship/tasks/subreddit-learn-mimic-20260414-173905/: concerns.md
reddit_toolkit/: cli.py  cli_notion.py  cli_pipeline.py  cli_product.py  cli_rules.py  cli_scan.py  cli_style.py  content.py  display.py  extractor.py  notion_pusher.py  pipeline.py  praw_client.py  profile_store.py  reddit_client.py  rules_learner.py  rules_store.py  scanner.py  style_learner.py  style_store.py  subreddit_tracker.py  subreddits.py  writer.py
tests/: test_cli.py  test_content.py  test_display.py  test_extractor.py  test_notion_pusher.py  test_praw_client.py  test_profile_store.py  test_reddit_client.py  test_scanner.py  test_style_learner.py  test_style_store.py  test_subreddits.py  test_writer.py
(+8 files in other folders)
