[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-toolkit"
version = "0.1.0"
description = "CLI toolkit to discover Reddit content and write Reddit posts"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.33.1",
    "anthropic>=0.94.0",
    "notion-client>=2.2.1",
    "python-dotenv>=1.0.0",
    "newspaper4k>=0.9.3",
    "rich>=13.0.0",
    "schedule>=1.2.0",
    "praw>=7.7.0",
]

[project.scripts]
reddit-toolkit = "reddit_toolkit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["reddit_toolkit*"]
